--- a/contact.html
+++ b/contact.html
@@ -255,7 +255,7 @@
                     <ul style="opacity: 0.8; font-size: 0.95rem;">
                         <li class="mb-2">123 Coffee St, Bangalore</li>
                         <li class="mb-2">hello@vasave.com</li>
-                        <li class="mb-2">+91 98765 43210</li>
+                        <li class="mb-2">+91 9154184099</li>
                     </ul>
                 </div>
                 <div>
