--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cart | Vasave Cafe</title>
+    <title>Cart | Jeevan's Cafe</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
@@ -16,7 +16,7 @@
         <div class="container flex-between">
             <a href="index.html" class="logo"
                 style="font-family: var(--font-heading); font-size: 1.8rem; font-weight: 700; color: var(--primary-brown);">
-                <i class="fa-solid fa-mug-hot" style="margin-right: 8px;"></i>Vasave
+                <i class="fa-solid fa-mug-hot" style="margin-right: 8px;"></i>Jeevan's Cafe
             </a>
 
             <nav class="nav-links">
@@ -102,7 +102,7 @@
         <div class="container">
             <div class="grid-4" style="margin-bottom: 50px;">
                 <div>
-                    <h3 class="footer-logo">Vasave Cafe</h3>
+                    <h3 class="footer-logo">Jeevan's Cafe</h3>
                     <p style="font-size: 0.9rem;">Brewing memories, one cup at a time.</p>
                 </div>
                 <div>
@@ -117,8 +117,8 @@
                     <h4>Contact</h4>
                     <ul style="opacity: 0.8; font-size: 0.95rem;">
                         <li class="mb-2">123 Coffee St, Bangalore</li>
-                        <li class="mb-2">hello@vasave.com</li>
-                        <li class="mb-2">+91 98765 43210</li>
+                        <li class="mb-2">hello@Jeevan's Cafe</li>
+                        <li class="mb-2">+91 9154184099</li>
                     </ul>
                 </div>
                 <div>
