--- a/checkout.html
+++ b/checkout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checkout | Vasave Cafe</title>
+    <title>Checkout | Jeevan's Cafe</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
@@ -16,8 +16,7 @@
         <div class="container flex-between">
             <a href="index.html" class="logo"
                 style="font-family: var(--font-heading); font-size: 1.8rem; font-weight: 700; color: var(--primary-brown);">
-                <i class="fa-solid fa-mug-hot" style="margin-right: 8px;"></i>Vasave
-            </a>
+                <i class="fa-solid fa-mug-hot" style="margin-right: 8px;"></i>Jeevan
 
             <nav class="nav-links">
                 <a href="index.html">Home</a>
