--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | Vasave Cafe</title>
+    <title>Contact | Jeevan's Cafe</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
@@ -16,7 +16,7 @@
         <div class="container flex-between">
             <a href="index.html" class="logo"
                 style="font-family: var(--font-heading); font-size: 1.8rem; font-weight: 700; color: var(--primary-brown);">
-                <i class="fa-solid fa-mug-hot" style="margin-right: 8px;"></i>Vasave
+                <i class="fa-solid fa-mug-hot" style="margin-right: 8px;"></i>Jeevan
             </a>
 
             <nav class="nav-links">
@@ -96,7 +96,7 @@
                                 <i class="fa-solid fa-phone" style="color: var(--accent-orange); font-size: 1.3rem; margin-top: 4px;"></i>
                                 <div>
                                     <h4 style="margin-bottom: 6px; font-size: 1.1rem;">Call Us</h4>
-                                    <p style="color: var(--text-muted);">+91 98765 43210</p>
+                                    <p style="color: var(--text-muted);">+91 9154184099</p>
                                 </div>
                             </div>
                         </div>
@@ -106,7 +106,7 @@
                                 <i class="fa-solid fa-envelope" style="color: var(--accent-orange); font-size: 1.3rem; margin-top: 4px;"></i>
                                 <div>
                                     <h4 style="margin-bottom: 6px; font-size: 1.1rem;">Email Us</h4>
-                                    <p style="color: var(--text-muted);">hello@vasavecafe.com</p>
+                                    <p style="color: var(--text-muted);">hello@Jeevan's cafe.com</p>
                                 </div>
                             </div>
                         </div>
@@ -239,7 +239,7 @@
         <div class="container">
             <div class="grid-4" style="margin-bottom: 50px;">
                 <div>
-                    <h3 class="footer-logo">Vasave Cafe</h3>
+                    <h3 class="footer-logo">Jeevan's Cafe</h3>
                     <p style="font-size: 0.9rem;">Brewing memories, one cup at a time.</p>
                 </div>
                 <div>
@@ -254,7 +254,7 @@
                     <h4>Contact</h4>
                     <ul style="opacity: 0.8; font-size: 0.95rem;">
                         <li class="mb-2">123 Coffee St, Bangalore</li>
-                        <li class="mb-2">hello@vasave.com</li>
+                        <li class="mb-2">hello@Jeevan's Cafe.com</li>
                         <li class="mb-2">+91 9154184099</li>
                     </ul>
                 </div>
@@ -269,7 +269,7 @@
             </div>
             <div class="text-center"
                 style="border-top: 1px solid #ccc; padding-top: 20px; font-size: 0.8rem; opacity: 0.6; display:flex; align-items:center; justify-content:center; gap:8px;">
-                <span>&copy; 2026 Vasave Cafe. All rights reserved.</span>
+                <span>&copy; 2026 Jeevan's Cafe. All rights reserved.</span>
             </div>
         </div>
     </footer>
