--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container flex-between">
             <a href="index.html" class="logo"
                 style="font-family: var(--font-heading); font-size: 1.8rem; font-weight: 700; color: var(--primary-brown);">
-                <i class="fa-solid fa-mug-hot" style="margin-right: 8px;"></i>Vasave
+                <i class="fa-solid fa-mug-hot" style="margin-right: 8px;"></i>Jeevan
             </a>
 
             <nav class="nav-links">
@@ -184,7 +184,7 @@
     <section class="section">
         <div class="container text-center mb-4">
             <h2>Visit Us Today</h2>
-            <p>Follow us @VasaveCafe</p>
+            <p>Follow us @Jeevan's Cafe</p>
         </div>
         <div class="container">
             <div class="grid-4">
@@ -232,8 +232,8 @@
                     <h4>Contact</h4>
                     <ul style="opacity: 0.8; font-size: 0.95rem;">
                         <li class="mb-2">123 Coffee St, Bangalore</li>
-                        <li class="mb-2">hello@vasave.com</li>
-                        <li class="mb-2">+91 98765 43210</li>
+                        <li class="mb-2">hello@Jeevan's Cafe.com</li>
+                        <li class="mb-2">+91 9154184099</li>
                     </ul>
                 </div>
                 <div>
@@ -247,7 +247,7 @@
             </div>
             <div class="text-center"
                 style="border-top: 1px solid #ccc; padding-top: 20px; font-size: 0.8rem; opacity: 0.6; display:flex; align-items:center; justify-content:center; gap:8px;">
-                <span>&copy; 2026 Vasave Cafe. All rights reserved.</span>
+                <span>&copy; 2026 Jeevan's Cafe. All rights reserved.</span>
             </div>
         </div>
     </footer>
