--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu | Vasave Cafe</title>
+    <title>Menu | Jeevan's Cafe</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
@@ -16,7 +16,7 @@
         <div class="container flex-between">
             <a href="index.html" class="logo"
                 style="font-family: var(--font-heading); font-size: 1.8rem; font-weight: 700; color: rgba(255, 255, 255, 0.95);">
-                <i class="fa-solid fa-mug-hot" style="margin-right: 8px;"></i>Jeevan Cafe
+                <i class="fa-solid fa-mug-hot" style="margin-right: 8px;"></i>Jeevan
             </a>
 
             <nav class="nav-links">
@@ -91,7 +91,7 @@
         style="background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://images.unsplash.com/photo-1533089860892-a7c6f0a88666?auto=format&fit=crop&w=1920&q=80') center/cover; padding: 120px 0;">
         <div class="container text-center">
             <h5 style="color: var(--accent-gold); letter-spacing: 2px;">Chef's Special</h5>
-            <h2 style="color: white; margin-bottom: 40px;">The Vasave Big Breakfast</h2>
+            <h2 style="color: white; margin-bottom: 40px;">The Jeevan's Big Breakfast</h2>
             <div
                 style="max-width: 800px; margin: 0 auto; position: relative; height: 300px; display: flex; align-items: center; justify-content: center;">
                 <div
@@ -114,7 +114,7 @@
         <div class="container">
             <div class="grid-4" style="margin-bottom: 50px;">
                 <div>
-                    <h3 class="footer-logo">Vasave Cafe</h3>
+                    <h3 class="footer-logo">Jeevan's Cafe</h3>
                     <p style="font-size: 0.9rem;">Brewing memories, one cup at a time.</p>
                 </div>
                 <div>
@@ -129,7 +129,7 @@
                     <h4>Contact</h4>
                     <ul style="opacity: 0.8; font-size: 0.95rem;">
                         <li class="mb-2">123 Coffee St, Bangalore</li>
-                        <li class="mb-2">hello@vasave.com</li>
+                        <li class="mb-2">hello@Jeevan's Cafe.com</li>
                         <li class="mb-2">+91 9154184099</li>
                     </ul>
                 </div>
@@ -144,7 +144,7 @@
             </div>
             <div class="text-center"
                 style="border-top: 1px solid #ccc; padding-top: 20px; font-size: 0.8rem; opacity: 0.6; display:flex; align-items:center; justify-content:center; gap:8px;">
-                <span>&copy; 2026 Vasave Cafe. All rights reserved.</span>
+                <span>&copy; 2026 Jeevan's Cafe. All rights reserved.</span>
                 
             </div>
         </div>
