--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up | Vasave Cafe</title>
+    <title>Sign Up | Jeevan's Cafe</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
@@ -16,7 +16,7 @@
         <div class="container flex-between">
             <a href="index.html" class="logo"
                 style="font-family: var(--font-heading); font-size: 1.8rem; font-weight: 700; color: var(--primary-brown);">
-                <i class="fa-solid fa-mug-hot" style="margin-right: 8px;"></i>Vasave
+                <i class="fa-solid fa-mug-hot" style="margin-right: 8px;"></i>Jeevan
             </a>
 
             <nav class="nav-links">
@@ -63,7 +63,7 @@
 
     <footer>
         <div class="container text-center" style="padding:40px 0; display:flex; justify-content:center; gap:8px;">
-            <span>&copy; 2026 Vasave Cafe</span>
+            <span>&copy; 2026 Jeevan's Cafe</span>
         </div>
     </footer>
 
