--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
         <div class="container">
             <div class="founder-grid">
                 <div class="reveal fade-in-left">
-                    <img class="founder-photo" src="Images/jeevan.1.jpeg" alt="Founder - Rahul">
+                    <img class="founder-photo" src="Images/jeevan.1.jpeg" alt="Founder - Jeevan">
                 </div>
                 <div class="reveal fade-in-right">
                     <h5 style="color: var(--accent-orange); letter-spacing: 2px; text-transform: uppercase; margin-bottom: 16px;">Founder</h5>
