--- a/cart.html
+++ b/cart.html
@@ -132,7 +132,7 @@
             </div>
             <div class="text-center"
                 style="border-top: 1px solid #ccc; padding-top: 20px; font-size: 0.8rem; opacity: 0.6; display:flex; align-items:center; justify-content:center; gap:8px;">
-                <span>&copy; 2026 Vasave Cafe. All rights reserved.</span>
+                <span>&copy; 2026 Jeevan's Cafe. All rights reserved.</span>
                 <span style="opacity:0.8;">|</span>
             </div>
         </div>
